2009-03-20  Ankit Jain  <jankit@novell.com>

	* src/TargetService.cs (OnSendFolder): Enable sending folders.

2009-03-20  Ankit Jain  <jankit@novell.com>

	Fix bug #18.
	* src/Protocol.cs (TimeStamp): New.
	* src/SendingHandler.cs: Send LastWriteTime as the timestamp
	for files.
	* src/RequestHandler.cs: Set LastWriteTime if timestamp is found.

2009-03-20  Ankit Jain  <jankit@novell.com>

	* src/Application.cs: Add a --quiet option to start with
	no visible window.

2009-03-20  Ankit Jain  <jankit@novell.com>

	* giver.sln, giver.csproj: Add msbuild project files.
	This has a 'Windows' configuration also. It needs 
	Mono.Zeroconf.dll and Mono.Zeroconf.Providers.Bonjour.dll.
	* src/Defines.WIN32.cs: New.
	* winbin/Mono.Zeroconf.dll, winbin/Mono.Zeroconf.Providers.Bonjour.dll:
	Add for windows build.

2009-01-24  Ankit Jain  <radical@gmail.com>

	* src/GnomePlatformService.cs (AskYesNoQuestion):
	* src/WindowsPlatformService.cs (AskYesNoQuestion):
	Reverse the order of the buttons, make the 'yes' button
	the default. Handle 'Close' event.

2009-01-23  Ankit Jain  <radical@gmail.com>

	* src/Application.cs (QuitMainLoop): Rename to ..
	(Quit): .. this. Move to here from ..
	(OnQuit): .. here.
	* src/TargetWindow.cs (WindowDeleted): Call Application.Quit

2009-01-22  Ankit Jain  <radical@gmail.com>

	* src/WindowsPlatformService.cs (ShowMessage):
	(AskYesNoQuestion): Use the @icon also.

2009-01-22  Ankit Jain  <radical@gmail.com>

	* src/RequestHandler.cs (HandlePayload): 'relativePath' can be null.

2009-01-22  Ankit Jain  <radical@gmail.com>

	* src/GiverService.cs (.ctor): Set authentication to Anonymous instead
	of None. None actually translates to forbid (http 403)!

2009-01-19  Ankit Jain  <radical@gmail.com>

	* src/Application.cs (ShowAppNotification): Remove.
	* src/PlatformService.cs (ShowMessage): New.
	(AskYesNoQuestion): New.
	* src/GnomePlatformService.cs: Implement the new methods with
	notify-sharp.